--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors Game</title>
-    <link rel="icon" type="image/x-icon" href="rockpaperscissors_logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="rockpaperscissors_logo.png">
 
   </head>
   <body>
